# chess-rs

./: Cargo.toml
src/: boards.rs  main.rs
