[package]
name = "chess-rs"
description = "Chess, written using rust"
publish = false
version = "0.1.0"

edition = "2021"

[dependencies]
serde = "1.0.210"
serde_json = "1.0.128"
rayon = "1.10.0"
thiserror = "1.0.64"
rand = "0.9.0-alpha.2"
log = "0.4.22"
env_logger = "0.11.5"
nalgebra = "0.33.0"
itertools = "0.13.0"
chrono = "0.4.38"
bitflags = "2.6.0"

